package proto;

option java_package = "io.islnd.android.islnd.messaging.proto";

message Identity {
  required string display_name = 1;
  required string alias = 2;
  required string group_key = 3;
  required string public_key = 4;
}

message SignedObject {
  required string object = 1;
  required string signature = 2;
}

message PostUpdate {
  required bool is_delete = 1;
  required string id = 2;
  required string content = 3;
  required int64 timestamp = 4;
}

message CommentUpdate {
  required bool is_delete = 1;
  required string post_author_pseudonym = 2;
  required string comment_author_pseudonym = 3;
  required string post_id = 4;
  required string comment_id = 5;
  required string content = 6;
  required int64 timestamp = 7;
}

message Profile {
  required string display_name = 1;
  required string about_me = 2;
  required bytes profile_image = 3;
  required bytes header_image = 4;
  required int32 version = 5;
}

message ChangeDisplayNameEvent {
  required string alias = 1;
  required string display_name = 2;
}
